--- a/WebContent/b_forum/create_forum.html
+++ b/WebContent/b_forum/create_forum.html
@@ -1,20 +1,20 @@
-<div id="create-blog">
+<div id="create-forum">
 		<div class="container">
-			<div class="form-area k-padding">
+			<div class="form-area">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 						<fieldset>
-							<legend>Create Blog</legend>
+							<legend>Create Forum</legend>
 							<div class="form-inner">
 								<form name="" action="" method="POST">
 									<div class="one">
-										<input type="text" name="title" required placeholder="Title of the Blog">
+										<input type="text" name="title" required placeholder="Title of the Forum">
 									</div>
 									<div class="one">
-										<input type="text" name="reason" required placeholder="Why this blog ?" />
+										<input type="text" name="reason" required placeholder="Why this forum ?" />
 									</div>
 									<div class="one">
-										<textarea type="text" name="content" required placeholder="Content of the Blog..."></textarea>
+										<textarea type="text" name="content" required placeholder="Content of the Forum..."></textarea>
 									</div>
 									<div>
 										<input type="submit" class="btn btn-info kp-button floatright"	value="submit">
