--- a/WebContent/b_home/home.html
+++ b/WebContent/b_home/home.html
@@ -1,3 +1,20 @@
-<div>
-	This is Home Page
+<div class="site-wrapper">
+	<div class="site-wrapper-inner">
+		<div class="home-container">
+			<div class="inner home">
+				<h1 class="home-heading">Home page.</h1>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur
+					adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+					dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+					exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate
+					velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+					occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+					mollit anim id est laborum.</p>
+				<p class="lead">
+					<a href="#" class="btn btn-lg btn-default">Learn more</a>
+				</p>
+			</div>
+		</div>
+	</div>
 </div>
