--- a/WebContent/b_job/post_job.html
+++ b/WebContent/b_job/post_job.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<div id="post_job">
+	<div class="container">
+		<div class="form-area">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+					<fieldset>
+						<legend>Post Job</legend>
+						<div class="form-inner">
+							<form name="" action="" method="POST">
+								<div class="one">
+									<input type="text" name="companyName" required
+										placeholder="Company Name">
+								</div>
+								<div class="one">
+									<input type="text" name="location" required
+										placeholder="Location" />
+								</div>
+								<div class="one">
+									<textarea type="text" rows="5" name="content" required
+										placeholder="Job Description..."></textarea>
+								</div>
+								<div>
+									<input type="submit" class="btn btn-info kp-button floatright"
+										value="submit">
+								</div>
+							</form>
+						</div>
+					</fieldset>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
