--- a/WebContent/b_user/login.html
+++ b/WebContent/b_user/login.html
@@ -7,14 +7,14 @@
 					<fieldset>
 						<legend>Login</legend>
 						<div class="form-inner">
-							<form ng-submit="ctrl.submit()" name="myForm" >
+							<form ng-submit="ctrl.login()" name="myForm" >
 								<div class="one-half">
 									<input type="text" name="username" required 
-										placeholder="UserID" ng-model="ctrl.users.id">
+										placeholder="UserID" ng-model="ctrl.user.id">
 								</div>
 								<div class="one-half">
 									<input type="password" name="password" required 
-										placeholder="Password" ng-model="ctrl.users.password">
+										placeholder="Password" ng-model="ctrl.user.password">
 								</div>
 								<div>
 									<input type="submit" class="btn btn-info kp-button floatright"
