--- a/WebContent/b_blog/create_blog.html
+++ b/WebContent/b_blog/create_blog.html
@@ -1,6 +1,6 @@
 <div id="create-blog">
 		<div class="container">
-			<div class="form-area k-padding">
+			<div class="form-area">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 						<fieldset>
