--- a/WebContent/b_blog/list_blogs.html
+++ b/WebContent/b_blog/list_blogs.html
@@ -1,7 +1,7 @@
 <div class="container">
 	Welcome to Blogs
 	<div ng-repeat="blog in ctrl.blogs">
-		<a href="#" data-ng-click="ctrl.getSelectedBlog(blog.id)"> Title:
-			{{blog.title}} - Written By: {{blog.userId}} </a>
+		<a href="#" ng-click="ctrl.getSelectedBlog(blog.id)"> 
+		Title: {{blog.title}} - Written By: {{blog.userId}} </a>
 	</div>
 </div>
