--- a/WebContent/b_friend/search_friend.html
+++ b/WebContent/b_friend/search_friend.html
@@ -1,6 +1,8 @@
 <div class="container">
-	<div ng-repeat="blog in ctrl.blogs">
-		<a href="#" data-ng-click="ctrl.getSelectedBlog(blog.id)"> Title:
-			{{blog.title}} - Written By: {{blog.userId}} </a>
+	<h3>Find Friends</h3>
+	<div ng-repeat="friend in ctrl.friends">
+		<a href="#" data-ng-click="ctrl.getMyFriends()">
+		UserId : {{friend.userId}} &nbsp;&nbsp;FriendId : {{friend.friendId}}&nbsp;&nbsp;
+		Availability : {{user.isOnline}} </a>
 	</div>
 </div>
