--- a/WebContent/b_job/search_job.html
+++ b/WebContent/b_job/search_job.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container">
+	Search Jobs
+	<div ng-repeat="job in ctrl.jobs">
+		<a href="#" ng-click="ctrl.getSelectedBlog(blog.id)"> 
+		Title: {{blog.title}} - Written By: {{blog.userId}} </a>
+	</div>
+</div>
