--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-ng-app="myApp">
+<html ng-app="myApp">
 
 <head>
 <meta charset="UTF-8">
@@ -33,12 +33,18 @@
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse nav-wil"
-				id="bs-example-navbar-collapse-1">
+			<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 				<nav class="link-effect-12" id="link-effect-12">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="#/"><span>Home</span></a></li>
-						<li><a href="#/job_opportunities"><span>Job</span></a></li>
+						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Job<span
+								class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#/post_job"><span>Post Job</span></a></li>
+								<li><a href="#/search_job"><span>Search Job</span></a></li>
+								<li><a href="#/view_applied_jobs"><span>Job Applied</span></a></li>
+							</ul>
+						</li>
 						<li><a href="#/event"><span>Event</span></a></li>
 						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Blog<span
 								class="caret"></span></a>
@@ -64,15 +70,22 @@
 								<li><a href="#/view_friend"><span>View Friends</span></a></li>
 							</ul>
 						</li>
-						<li><a href="#/chat"><span>Chat</span></a></li>
+						<!-- <li><a href="#/chat"><span>Chat</span></a></li> -->
 						<li><a href="#/about"><span>About</span></a></li>
-						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Sign
-								In<span class="caret"></span>
-						</a>
+					<div ng-controller="UserController as ctrl">
+
+					<div class="floatright" ng-show="currentUser==''">	
+						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Sign In<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#/login"><span>Sign In</span></a></li>
 								<li><a href="#/register"><span>Sign Up</span></a></li>
-							</ul></li>
+							</ul>
+						</li>
+					</div>
+					<div class="floatright" ng-hide="currentUser==''">	
+						<li><a class="fa fa-sign-out" href="#/logout">Logout</a></li>
+					</div>
+</div>
 					</ul>
 				</nav>
 			</div>
@@ -95,7 +108,7 @@
 			<div class="footer-bottom">
 				<div class="footer-bottom-left">
 					<p>
-						@2016. <a href="#">Binder.</a>Copyright by NIIT Ltd.
+						@2016. <a href="#">Binder.</a>Copyright by niitstudent_sovanjana NIIT Ltd.
 					</p>
 				</div>
 			</div>
@@ -107,6 +120,7 @@
 
 	<!--  javascript for (angular + jquery + bootstrap)  -->
 	<script src="resources/js/angular.js"></script>
+	<script src="resources/js/angular-cookies.min.js"></script>
 	<script src="resources/js/angular-route.min.js"></script>
 	<script src="resources/js/jquery-1.11.0.min.js"></script>
 	<script src="resources/js/bootstrap.min.js"></script>
@@ -141,16 +155,16 @@
 	<script src="b_forum/ForumService.js"></script>
 		
 	<!-- event related js files -->
-	<!-- <script src="b_event/EventController.js"></script>
-	<script src="b_event/EventService.js"></script> -->
+	<script src="b_event/EventController.js"></script>
+	<script src="b_event/EventService.js"></script>
 
 	<!-- chat related js files -->
-	<!-- <script src="b_chat/ChatController.js"></script>
-	<script src="b_chat/ChatService.js"></script> -->
+	<script src="b_chat/ChatController.js"></script>
+	<script src="b_chat/ChatService.js"></script>
 
 	<!-- about related js files -->
-	<!-- <script src="b_about/AboutController.js"></script>
-	<script src="b_about/AboutService.js"></script> -->
+	<script src="b_about/AboutController.js"></script>
+	<script src="b_about/AboutService.js"></script>
 
 </body>
 </html>
