--- a/WebContent/b_home/home.html
+++ b/WebContent/b_home/home.html
@@ -2,6 +2,7 @@
 	<div class="site-wrapper-inner">
 		<div class="home-container">
 			<div class="inner home">
+				<h4>Welcome : {{currentUser.name}} </h4>&nbsp;&nbsp;You loggedin as : {{currentUser.role}}
 				<h1 class="home-heading">Home page.</h1>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur
 					adipiscing elit, sed do eiusmod tempor incididunt ut labore et
