--- a/WebContent/b_forum/create_forum.html
+++ b/WebContent/b_forum/create_forum.html
@@ -1,29 +1,38 @@
-<div id="create-forum">
-		<div class="container">
-			<div class="form-area">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-						<fieldset>
-							<legend>Create Forum</legend>
-							<div class="form-inner">
-								<form name="" action="" method="POST">
-									<div class="one">
-										<input type="text" name="title" required placeholder="Title of the Forum">
-									</div>
-									<div class="one">
-										<input type="text" name="reason" required placeholder="Why this forum ?" />
-									</div>
-									<div class="one">
-										<textarea type="text" name="content" required placeholder="Content of the Forum..."></textarea>
-									</div>
-									<div>
-										<input type="submit" class="btn btn-info kp-button floatright"	value="submit">
-									</div>
-								</form>
-							</div>
-						</fieldset>
+<div id="create-blog">
+	<div class="container">
+		<div class="form-area">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+					<div ng-show='ctrl.forum.errorMessage!=""'>
+						<div class="alart alart-danger fade in">Error :
+							{{ctrl.forum.errorMessage}}</div>
 					</div>
+					<fieldset>
+						<legend>Create Forum</legend>
+						<div class="form-inner">
+							<form ng-submit="ctrl.submit()" name="myForm"
+								class="form-horizontal">
+								<div class="one">
+									<input type="text" name="title" required
+										placeholder="Title of the Blog" ng-model="ctrl.forum.id">
+								</div>
+								<!-- <div class="one">
+									<input type="text" name="reason" required
+										placeholder="Why this blog ?"  ng-model="ctrl.forum.reason" >
+								</div> -->
+								<div class="one">
+									<textarea type="text" name="content" required
+										placeholder="Content of the Blog..." ng-model="ctrl.forum.description" ></textarea>
+								</div>
+								<div>
+									<input type="submit" class="btn btn-info kp-button floatright"
+										value="submit">
+								</div>
+							</form>
+						</div>
+					</fieldset>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
