--- a/WebContent/b_friend/search_friend.html
+++ b/WebContent/b_friend/search_friend.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<h3>Find Friends</h3>
-	<div ng-repeat="friend in ctrl.friends">
+	<div class="blog-list-font" ng-repeat="friend in ctrl.friends">
 		<a href="#" data-ng-click="ctrl.getMyFriends()">
 		UserId : {{friend.userId}} &nbsp;&nbsp;FriendId : {{friend.friendId}}&nbsp;&nbsp;
 		Availability : {{user.isOnline}} </a>
