--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,7 +37,7 @@
 				<nav class="link-effect-12" id="link-effect-12">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="#/"><span>Home</span></a></li>
-						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Job<span
+						<li><a class="dropdown-toggle" data-toggle="dropdown">Job<span
 								class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#/post_job"><span>Post Job</span></a></li>
@@ -46,7 +46,7 @@
 							</ul>
 						</li>
 						<li><a href="#/event"><span>Event</span></a></li>
-						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Blog<span
+						<li><a class="dropdown-toggle" data-toggle="dropdown">Blog<span
 								class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#/create_blog"><span>Add New Blog</span></a></li>
@@ -54,7 +54,7 @@
 								<!-- <li><a href="#/view_blog"><span>View Blog</span></a></li> -->
 							</ul>
 						</li>
-						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Forum<span
+						<li><a class="dropdown-toggle" data-toggle="dropdown">Forum<span
 								class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#/create_forum"><span>Add New Forum</span></a></li>
@@ -62,10 +62,10 @@
 								<!-- <li><a href="#/view_forum"><span>View Forum</span></a></li> -->
 							</ul>
 						</li>
-						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Friend<span
+						<li><a class="dropdown-toggle" data-toggle="dropdown">Friend<span
 								class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="#/add_friend"><span>Add New Friend</span></a></li>
+								<!-- <li><a href="#/add_friend"><span>Add New Friend</span></a></li> -->
 								<li><a href="#/search_friend"><span>Search Friends</span></a></li>
 								<li><a href="#/view_friend"><span>View Friends</span></a></li>
 							</ul>
@@ -75,7 +75,7 @@
 					<div ng-controller="UserController as ctrl">
 
 					<div class="floatright" ng-show="currentUser==''">	
-						<li><a class="dropdown-toggle" data-toggle="dropdown" href="">Sign In<span class="caret"></span></a>
+						<li><a class="dropdown-toggle" data-toggle="dropdown">Sign In<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#/login"><span>Sign In</span></a></li>
 								<li><a href="#/register"><span>Sign Up</span></a></li>
@@ -85,7 +85,7 @@
 					<div class="floatright" ng-hide="currentUser==''">	
 						<li><a class="fa fa-sign-out" href="#/logout">Logout</a></li>
 					</div>
-</div>
+					</div>
 					</ul>
 				</nav>
 			</div>
