--- a/WebContent/b_admin/manage_users.html
+++ b/WebContent/b_admin/manage_users.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<div id="manage-users">
+	<div class="container">
+		<div class="row">
+		<div class="col-md-8 col-md-offset-2">
+			<div class="list-group">
+				<a class="list-group-item">Manage Users</a>
+				<a href="#" ng-click="">xyz</a>
+				<a class="list-group-item">Manage Blogs</a>
+				<a href="#" ng-click="">xyz</a>
+				 <a class="list-group-item">Manage Forums</a>
+				 <a href="#" ng-click="">xyz</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
