--- a/WebContent/b_user/register.html
+++ b/WebContent/b_user/register.html
@@ -15,11 +15,11 @@
 								class="form-horizontal">
 								<label>Register As.</label>
 								<div class="one">
-									<input type="radio" name="role" value="student"
+									<input type="radio" name="role" value="STUDENT"
 										ng-model="ctrl.user.role"> Student 
-										<input type="radio" name="role" value="alumni"
+										<input type="radio" name="role" value="ALUMNI"
 										ng-model="ctrl.user.role"> Alumni 
-										<input type="radio" name="role" value="employee"
+										<input type="radio" name="role" value="EMPLOYEE"
 										ng-model="ctrl.user.role"> Employee
 								</div>
 
