--- a/WebContent/b_blog/list_blogs.html
+++ b/WebContent/b_blog/list_blogs.html
@@ -1,7 +1,51 @@
-<div class="container">
-	Welcome to Blog
-	<div class="blog-list-font" ng-repeat="blog in ctrl.blogs">
-		<a href="#" ng-click="ctrl.getSelectedBlog(blog.id)"> 
-		Title: {{blog.title}} - Written By: {{blog.userId}} </a>
+<div id="list-blogs">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<fieldset>
+					<legend>Welcome to Blog</legend>
+					<div class="blog-list-font">
+						<div ng-show="currentUser.role=='ADMIN'">
+							<div class="panel panel-default" ng-repeat="blog in ctrl.blogs"
+								ng-show="blog.status=='N'" style="margin-bottom: 2em;">
+								<a>
+									<div class="one">
+										<label><span>Title : </span>{{blog.title}}</label>
+									</div>
+									<div class="one">
+										<label><span>Written By : </span>{{blog.userId}}</label>
+									</div> 
+										<input type="button" ng-click="ctrl.rejectBlog(blog, blog.id)"
+												class="btn btn-danger floatright" value="Reject"
+												style="margin-top: 13px; width: 7em; margin-right: 8px;" /> 
+										<input	type="button" ng-click="ctrl.approveBlog(blog, blog.id)"
+												class="btn btn-info floatright" value="Approve"
+												style="margin-top: 13px; width: 7em; margin-right: 8px;" /> 
+										<input type="button" ng-click="ctrl.getSelectedBlog(blog.id)"
+												class="btn btn-success floatright" value="View"
+												style="margin-top: 13px; width: 7em; margin-right: 8px;" />
+								</a>
+							</div>
+						</div>
+						<div ng-hide="currentUser.role=='ADMIN'">
+							<div class="panel panel-default" ng-repeat="blog in ctrl.blogs"
+								ng-show="blog.status=='A'" style="margin-bottom: 2em;">
+								<a>
+									<div class="one">
+										<label><span>Title : </span>{{blog.title}}</label>
+									</div>
+									<div class="one">
+										<label><span>Written By : </span>{{blog.userId}}</label>
+									</div> 
+										<input type="button" ng-click="ctrl.getSelectedBlog(blog.id)"
+												class="btn btn-success floatright" value="View"
+												style="margin-top: 13px; width: 10em; margin-right: 8px;" />
+								</a>
+							</div>
+						</div>
+					</div>
+				</fieldset>
+			</div>
+		</div>
 	</div>
 </div>
