--- a/WebContent/b_home/home.html
+++ b/WebContent/b_home/home.html
@@ -2,7 +2,12 @@
 	<div class="site-wrapper-inner">
 		<div class="home-container">
 			<div class="inner home">
-				<h4>Welcome : {{currentUser.name}} </h4>&nbsp;&nbsp;You loggedin as : {{currentUser.role}}
+				<h4 ng-hide="currentUser==''">Welcome : {{currentUser.name}} </h4>
+				&nbsp;
+				&nbsp;
+				<h4 ng-hide="currentUser==''">You loggedin as : {{currentUser.role}}</h4>
+				&nbsp;
+				&nbsp;
 				<h1 class="home-heading">Home page.</h1>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur
 					adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -13,7 +18,7 @@
 					occaecat cupidatat non proident, sunt in culpa qui officia deserunt
 					mollit anim id est laborum.</p>
 				<p class="lead">
-					<a href="#" class="btn btn-lg btn-default">Learn more</a>
+					<a href="#/about" class="btn btn-lg btn-default">Learn more</a>
 				</p>
 			</div>
 		</div>
