--- a/WebContent/b_job/post_job.html
+++ b/WebContent/b_job/post_job.html
@@ -6,22 +6,24 @@
 					<fieldset>
 						<legend>Post Job</legend>
 						<div class="form-inner">
-							<form name="" action="" method="POST">
+							<form ng-submit="ctrl.submit()" class="form-horizontal" name="myForm">
 								<div class="one">
-									<input type="text" name="companyName" required
+									<input ng-model="ctrl.job.companyName" type="text" required
 										placeholder="Company Name">
 								</div>
 								<div class="one">
-									<input type="text" name="location" required
+									<input ng-model="ctrl.job.location" type="text" required
 										placeholder="Location" />
 								</div>
 								<div class="one">
-									<textarea type="text" rows="5" name="content" required
+									<textarea ng-model="ctrl.job.content" type="text" rows="5" required
 										placeholder="Job Description..."></textarea>
 								</div>
 								<div>
 									<input type="submit" class="btn btn-info kp-button floatright"
 										value="submit">
+									<input type="button" class="btn btn-info kp-button floatright" 
+										value="reset form" ng-click="ctrl.reset()">
 								</div>
 							</form>
 						</div>
