--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -97,6 +97,7 @@
 								class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#/search_friend"><span>Search Friends</span></a></li>
+								<li><a href="#/view_friend_list"><span>View Friend-list</span></a></li>
 								<li><a href="#/view_friend"><span>View Friends</span></a></li>
 							</ul>
 						</li>
