--- a/WebContent/b_friend/search_friend.html
+++ b/WebContent/b_friend/search_friend.html
@@ -10,10 +10,10 @@
 								style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
-										<label><span>Friend Id : </span>{{user.id}}</label>
+										<label><span style="color: black;">Friend Id : </span>{{user.id}}</label>
 									</div>
 									<div class="one">
-										<label><span>Name : </span>{{user.name}}</label>
+										<label><span style="color: black;">Name : </span>{{user.name}}</label>
 									</div> 		
 									<input type="button" ng-click="ctrl.sendFriendRequest(user.id)"
 												class="btn btn-info floatright" value="Send Request"
