--- a/WebContent/b_friend/view_friend_list.html
+++ b/WebContent/b_friend/view_friend_list.html
@@ -2,12 +2,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
+
 				<fieldset>
-					<legend>Find Friends</legend>
-					<div class="blog-list-font">
+					<legend>Friend List</legend>
+					<div class="friend-list-font">
 						<div>
-							<div class="panel panel-default" ng-repeat="friend in ctrl.friends"
-								style="margin-bottom: 2em;">
+							<div class="panel panel-default" ng-repeat="friend in ctrl.friends" 
+									ng-show="friend.status=='A'" style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
 										<label><span>Friend Id : </span>{{friend.friendId}}</label>
@@ -17,7 +18,11 @@
 						</div>
 					</div>
 				</fieldset>
+				<input type="button" ng-click="" class="btn btn-danger floatright"
+					value="New Requests" style="margin-top: 13px; margin-bottom: 3em; width: 9em; margin-right: 8px;" />
 			</div>
 		</div>
 	</div>
-</div>
+	
+	
+	
