--- a/WebContent/b_job/post_job.html
+++ b/WebContent/b_job/post_job.html
@@ -16,7 +16,7 @@
 										placeholder="Location" />
 								</div>
 								<div class="one">
-									<textarea ng-model="ctrl.job.content" type="text" rows="5" required
+									<textarea ng-model="ctrl.job.description" type="text" rows="5" required
 										placeholder="Job Description..."></textarea>
 								</div>
 								<div>
