--- a/WebContent/b_blog/list_blogs.html
+++ b/WebContent/b_blog/list_blogs.html
@@ -10,10 +10,10 @@
 								ng-show="blog.status=='N'" style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
-										<label><span>Title : </span>{{blog.title}}</label>
+										<label><span style="color: black;">Title : </span>{{blog.title}}</label>
 									</div>
 									<div class="one">
-										<label><span>Written By : </span>{{blog.userId}}</label>
+										<label><span style="color: black;">Written By : </span>{{blog.userId}}</label>
 									</div> 
 										<input type="button" ng-click="ctrl.rejectBlog(blog, blog.id)"
 												class="btn btn-danger floatright" value="Reject"
@@ -32,10 +32,10 @@
 								ng-show="blog.status=='A'" style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
-										<label><span>Title : </span>{{blog.title}}</label>
+										<label><span style="color: black;">Title : </span>{{blog.title}}</label>
 									</div>
 									<div class="one">
-										<label><span>Written By : </span>{{blog.userId}}</label>
+										<label><span style="color: black;">Written By : </span>{{blog.userId}}</label>
 									</div> 
 										<input type="button" ng-click="ctrl.getSelectedBlog(blog.id)"
 												class="btn btn-success floatright" value="View"
