--- a/WebContent/b_forum/list_forums.html
+++ b/WebContent/b_forum/list_forums.html
@@ -16,7 +16,7 @@
 										<label><span style="color: black;">Written By : </span>{{forum.userId}}</label>
 									</div> 
 										<input type="button" ng-click="ctrl.getSelectedForum(forum.id)"
-												class="btn btn-success floatright" value="View"
+												class="btn btn-success floatright" value="View" name="myForm"
 												style="margin-top: 13px; width: 10em; margin-right: 8px;" />
 								</a>
 							</div>
