--- a/WebContent/b_friend/view_friend.html
+++ b/WebContent/b_friend/view_friend.html
@@ -10,14 +10,14 @@
 								style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
-										<label><span>Friend Id : </span>{{friend.friendId}}</label>
+										<label>{{friend.friendId}}</label>										
+									</div>
+									<div class="one">
+										<label>{{friend.userId}}</label>										
 									</div>
 									<div class="one" ng-show="friend.status=='A'">
 										<label><span>Status : </span>Friend</label>
 									</div> 
-									<input type="button" ng-click=""
-												class="btn btn-info floatright" value="Send Message"
-												style="margin-top: 13px; width: 9em; margin-right: 8px;" />
 								</a>
 							</div>
 						</div>
