--- a/WebContent/b_friend/new_request_list.html
+++ b/WebContent/b_friend/new_request_list.html
@@ -5,13 +5,16 @@
 
 				<fieldset>
 					<legend>New Friend Requests</legend>
-					<div class="friend-list-font">
-						<div>
+					<div class="blog-list-font">
+						<div ng-show="currentUser !=''">
 							<div class="panel panel-default" ng-repeat="friend in newRequest" 
 									 ng-show="friend.status='N'" style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
 										<label><span>Friend Id : </span>{{friend.userId}}</label>
+									</div>
+									<div class="one">
+										<label><span>Friend Id : </span>{{friend.friendId}}</label>
 									</div>
 									<input type="button" class="btn btn-info floatright" value="Accept"
 										style="margin-top: 13px; margin-bottom: 3em; width: 9em; margin-right: 8px;"
