--- a/WebContent/b_event/list_events.html
+++ b/WebContent/b_event/list_events.html
@@ -1,12 +1,12 @@
 <div id="list-events">
 	<div class="container">
-		<div class="row">
+		<div class="row x-row">
 			<div class="col-md-8 col-md-offset-2">
 				<fieldset>
-					<legend>Events</legend>
+					<legend class="x-legend">Events</legend>
 					<div class="blog-list-font">
 						<div>
-							<div class="panel panel-default" ng-repeat="event in ctrl.events" style="margin-bottom: 2em;">
+							<div  class="x-panel" ng-repeat="event in ctrl.events" style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
 										<label><span style="color: black;">Event Name : </span>{{event.name}}</label>
