--- a/WebContent/b_forum/list_forums.html
+++ b/WebContent/b_forum/list_forums.html
@@ -1,12 +1,12 @@
 <div id="list-blogs">
 	<div class="container">
-		<div class="row">
+		<div class="row x-row">
 			<div class="col-md-8 col-md-offset-2">
 				<fieldset>
-					<legend>Welcome to Forum</legend>
+					<legend class="x-legend">Welcome to Forum</legend>
 					<div class="blog-list-font">						
 						<div>
-							<div class="panel panel-default" ng-repeat="forum in ctrl.forums"
+							<div class="x-panel" ng-repeat="forum in ctrl.forums"
 								style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
