--- a/WebContent/b_forum/view_forum.html
+++ b/WebContent/b_forum/view_forum.html
@@ -2,13 +2,13 @@
       <div class="container">
         <div class="row" style="margin-top: 2em;">
           <div class="col-md-8">
-            <h1 class="text-uppercase" id="forum-name"><a style="color: #efefef; text-decoration: none;">Forum</a></h1>
+            <h1 class="text-uppercase" id="x-name"><a style="color: #efefef; text-decoration: none;">Forum</a></h1>
             <h4>Written By : {{selectedForum.userId}} &nbsp;&nbsp;   On {{selectedForum.postDate | date}}</h4>
           </div>
         </div>
         <div class="row">
           <div class="col-md-8" style="padding: 2em;">
-            <div id="forum-area">
+            <div id="x-area">
               <p>{{selectedForum.description}}</p>
               <p class="author text-right">
                 <strong>Best regards</strong>
