--- a/WebContent/b_friend/new_request_list.html
+++ b/WebContent/b_friend/new_request_list.html
@@ -1,20 +1,20 @@
 <div id="list-blogs">
 	<div class="container">
-		<div class="row">
+		<div class="row x-row">
 			<div class="col-md-8 col-md-offset-2">
 
 				<fieldset>
-					<legend>New Friend Requests</legend>
+					<legend class="x-legend">New Friend Requests</legend>
 					<div class="blog-list-font">
 						<div ng-show="currentUser !=''">
-							<div class="panel panel-default" ng-repeat="friend in newRequest" 
+							<div class="x-panel" ng-repeat="friend in newRequest" 
 									 ng-show="friend.status='N'" style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
-										<label><span>Friend Id : </span>{{friend.userId}}</label>
+										<label><span style="color: black;">Friend Id : </span>{{friend.userId}}</label>
 									</div>
 									<div class="one">
-										<label><span>Friend Id : </span>{{friend.friendId}}</label>
+										<label><span style="color: black;">Friend Id : </span>{{friend.friendId}}</label>
 									</div>
 									<input type="button" class="btn btn-info floatright" value="Accept"
 										style="margin-top: 13px; margin-bottom: 3em; width: 9em; margin-right: 8px;"
@@ -31,5 +31,8 @@
 		</div>
 	</div>
 	
+	
+	
+								
 	
 	
