--- a/WebContent/b_friend/search_friend.html
+++ b/WebContent/b_friend/search_friend.html
@@ -1,12 +1,11 @@
 <div id="list-blogs">
 	<div class="container">
-		<div class="row">
+		<div class="row x-row">
 			<div class="col-md-8 col-md-offset-2">
 				<fieldset>
-					<legend>Find Friends</legend>
+					<legend class="x-legend">Find Friends</legend>
 					<div class="blog-list-font">
-						<div>
-							<div class="panel panel-default" ng-repeat="user in ctrl.users"
+						<div class="x-panel" ng-repeat="user in ctrl.users"
 								style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
@@ -19,7 +18,6 @@
 												class="btn btn-info floatright" value="Send Request"
 												style="margin-top: 13px; width: 9em; margin-right: 8px;" />	
 								</a>
-							</div>
 						</div>
 					</div>
 				</fieldset>
