--- a/WebContent/b_friend/view_friend.html
+++ b/WebContent/b_friend/view_friend.html
@@ -1,12 +1,12 @@
 <div id="list-blogs">
 	<div class="container">
-		<div class="row">
+		<div class="row x-row">
 			<div class="col-md-8 col-md-offset-2">
 				<fieldset>
-					<legend>Find Friends</legend>
+					<legend class="x-legend">My Friends</legend>
 					<div class="blog-list-font">
 						<div>
-							<div class="panel panel-default" ng-repeat="friend in ctrl.friends"
+							<div class="x-panel" ng-repeat="friend in ctrl.friends"
 									style="margin-bottom: 2em;">
 								<a>
 									<div class="one" ng-show="friend.userId==currentUser.id">
@@ -18,6 +18,9 @@
 									<div class="one" ng-show="friend.status=='A'">
 										<label><span>Status : </span>Friend</label>
 									</div> 
+									<input type="button" ng-click="ctrl.unFriend(friend, friend.id)"
+												class="btn btn-info floatright" value="Unfriend"
+												style="margin-top: 13px; width: 9em; margin-right: 8px;" />
 								</a>
 							</div>
 						</div>
