--- a/WebContent/b_job/search_job.html
+++ b/WebContent/b_job/search_job.html
@@ -1,12 +1,12 @@
 <div id="list-blogs">
 	<div class="container">
-		<div class="row">
+		<div class="row x-row">
 			<div class="col-md-8 col-md-offset-2">
 				<fieldset>
-					<legend>Find Jobs</legend>
+					<legend class="x-legend">Find Jobs</legend>
 					<div class="blog-list-font">
 						<div>
-							<div class="panel panel-default" ng-repeat="job in ctrl.jobs"
+							<div class="x-panel" ng-repeat="job in ctrl.jobs"
 								style="margin-bottom: 2em;">
 								<a>
 									<div class="one">
