--- a/WebContent/b_friend/new_request_list.html
+++ b/WebContent/b_friend/new_request_list.html
@@ -16,10 +16,10 @@
 									<div class="one">
 										<label><span style="color: black;">Friend Id : </span>{{friend.friendId}}</label>
 									</div>
-									<input type="button" class="btn btn-info floatright" value="Accept"
+									<input type="button" class="btn btn-success floatright" value="Accept"
 										style="margin-top: 13px; margin-bottom: 3em; width: 9em; margin-right: 8px;"
 										ng-click="ctrl.acceptFriend(friend, friend.id)" />
-									<input type="button" class="btn btn-info floatright" value="Reject"
+									<input type="button" class="btn btn-danger floatright" value="Reject"
 										style="margin-top: 13px; margin-bottom: 3em; width: 9em; margin-right: 8px;"
 										ng-click="ctrl.rejectFriend(friend, friend.id)" />
 								</a>								
