--- a/WebContent/b_chat/chat.html
+++ b/WebContent/b_chat/chat.html
@@ -10,24 +10,23 @@
 									class="form-horizontal">								
 								<div class="one">
 									<textarea placeholder="Write your message here..." rows="3"
-										ng-model="message" style="height: inherit;" >
+										ng-model="message" style="height: inherit;" autofocus >
 									</textarea>								
 									<div>
-										<input type="submit" class="btn btn-info floatright fa fa-send"
-											value="Send" ng-disabled="message.length > max || message.length === 0" 
-											style="width: 7em;"/>
-										<a>Max : 140 || <span class="count" ng-bind="max - message.length"
+										<input type="submit" class="btn btn-info chat-send floatright fa fa-paper-plane"
+											value="Send" ng-disabled="message.length > max || message.length === 0" />
+										<a class="max-char">max chars : 140  <span class="count" ng-bind="max - message.length"
 											ng-class="{danger:message.length >max}"> </span></a>									
 									</div>								
 								</div>
 								<div class="content-wrap messages">
 									<div class="msg message" ng-repeat="message in messages | orderBy:'time':'true'" style="text-align: left;">
 										<div class="msg-area" >
-											<div  ng-if="(($index + 1) % 8==0)?true:false" style="text-align: left">
+											<div class="chat-line" ng-if="(($index + 1) % 8==0)?true:false" style="text-align: left">
 												<!-- <time>{{message.time | time:'HH:mm'}}</time> -->	
 											  	
-											  	<span ng-class="{self: message.self}" style="text-align: right; color: #6b6b6b;"><i class="fa fa-calendar"></i>{{message.time | date}} : </span>
-     											<span ng-class="{self: message.self}">{{message.message}}</span>
+											  	<span class="chat-time" ng-class="{self: message.self}" style="text-align: right; color: #6b6b6b;"><i class="fa fa-clock-o"></i>  {{message.time | date:'HH:mm'}} :  </span>
+     											<span class="chat-desc" ng-class="{self: message.self}">{{message.message}}</span>
      										</div>
 										</div>
 									</div>
