--- a/WebContent/b_job/view_job_details.html
+++ b/WebContent/b_job/view_job_details.html
@@ -3,7 +3,7 @@
 		<div class="row" style="margin-top: 2em;">
 			<div class="col-md-8">
 				<h1 class="text-uppercase" id="x-name">Job Id : <a style="color: #efefef; text-decoration: none;">{{selectedJob.id}}</a></h1>
-				<h4 style="margin-bottom: 1em; font-size: 30px;">{{selectedJob.companyName}} off-campus drive</h4>
+				<h4 class="forum-top" style="margin-bottom: 1em; font-size: 30px;">{{selectedJob.companyName}} off-campus drive</h4>
 			</div>
 		</div>
 		<div class="row">
