--- a/WebContent/b_user/login.html
+++ b/WebContent/b_user/login.html
@@ -10,7 +10,7 @@
 							<form ng-submit="ctrl.login()" name="myForm" >
 								<div class="one-half">
 									<input type="text" name="username" required pattern=".{5,15}"
-										placeholder="UserID" ng-model="ctrl.user.id">
+										placeholder="UserID" ng-model="ctrl.user.id" autofocus>
 								</div>
 								<div class="one-half">
 									<input type="password" name="password" required pattern=".{5,15}"
