--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -118,6 +118,7 @@
 								<li><a href="#/register"><span>Sign Up</span></a></li>
 							</ul>
 						</li>
+						<li class="floatright" ng-hide="currentUser==''"><a href="#/myprofile" ng-click=""><span>Profile</span></a></li>
 						<li class="floatright" ng-hide="currentUser==''"><a href="#/logout" ng-click="ctrl.logout()"><span>Logout</span></a></li>
 					</ul>
 				</nav>
