--- a/WebContent/b_blog/list_blogs.html
+++ b/WebContent/b_blog/list_blogs.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="p-mask">
 							<h4>
-								<a><span>1.</span>{{blog.title}}</a>
+								<a><span><i class="fa fa-rss" aria-hidden="true"></i></span>{{blog.title}}</a>
 							</h4>
 							<ul>
 								<li><a href="#"><i class="fa fa-tags" aria-hidden="true"></i>5</a></li>
