--- a/WebContent/b_job/view_applied_jobs.html
+++ b/WebContent/b_job/view_applied_jobs.html
@@ -1,32 +1,33 @@
-<div id="list-blogs">
+<div class="blogs">
 	<div class="container">
-		<div class="row x-row">
-			<div class="col-md-8 col-md-offset-2">
-				<fieldset>
-					<legend class="x-legend">My Applied Jobs</legend>
-					<div class="blog-list-font">
-						<div>
-							<div class="x-panel" ng-repeat="job in getAppliedJob"
-								style="margin-bottom: 2em;">
-								<a>
-									<div class="one">
-										<label><span>Job ID : </span>{{job.id}}</label>
-									</div>
-									<div class="one">
-										<label><span>Company Name : </span>{{job.companyName}}</label>
-									</div> 	
-									<div class="one">
-										<label><span>Job Location : </span>{{job.location}}</label>
-									</div>
-									<input type="button" ng-click="ctrl.getJob(job.id)"
-												class="btn btn-info floatright" value="View Details"
-												style="margin-top: 13px; width: 10em; margin-right: 8px;" />
-								</a>
+		<div class="blog-all-grids">
+			
+			<div>
+				<div class="col-md-4 blogs-grid" ng-repeat="job in getAppliedJob" >
+					<div class="blog-all">
+						<div class="blog-all-sub frame">
+							<h3>{{job.companyName}}</h3>
+							<p style="text-align: center;">{{job.location}}</p>
+							<div class="more">
+								<input type="button" class="btn btn-info btn-more"
+									ng-click="ctrl.getJob(job.id)" value="View Details"
+									background: linear-gradient(to bottom right, #6f6f6f, #46a4da);>
 							</div>
 						</div>
+						<div class="p-mask">
+							<h4>
+								<a><span><i class="fa fa-building" aria-hidden="true"></i></span>{{job.companyName}}</a>
+							</h4>
+							<ul>
+								<li><a href="#"><i class="fa fa-tags" aria-hidden="true"></i> 5</a></li>
+								<li><a href="#"><i class="fa fa-star-o" aria-hidden="true"></i> 15</a></li>
+								<li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> 5</a></li>
+							</ul>
+						</div>
 					</div>
-				</fieldset>
+				</div>
 			</div>
+			<div class="clearfix"></div>
 		</div>
 	</div>
 </div>
