--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -118,7 +118,7 @@
 						
 						<li class="floatright" ng-show="currentUser==''"><a class="dropdown-toggle a-hover" data-toggle="dropdown" >Sign In<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="#/login"><span><i class="fa fa-sign-in" aria-hidden="true" style="font-size: x-large;"></i></span></a></li>
+								<li><a href="#/login"><span>Sign In</span></a></li>
 								<li><a href="#/register"><span>Sign Up</span></a></li>
 							</ul>
 						</li>
@@ -198,10 +198,6 @@
 	<!-- chat related js files -->
 	<script src="b_chat/ChatController.js"></script>
 	<script src="b_chat/ChatService.js"></script>
-
-	<!-- about related js files -->
-	<script src="b_about/AboutController.js"></script>
-	<script src="b_about/AboutService.js"></script>
 
 </body>
 </html>
